--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -4,50 +4,34 @@
 
 \section{Result of tests}
 
-\section{Sensor Server performance}
-\begin{itemize}
-  \item Scalability. If you were to connect GPS receivers directly to a computer, you would quickly run out of USB ports, even with a hub (as discussed here \ref{scmgr}). By using already existing network infrastructure, it becomes a lot easier to distribute Sensors and cover more area. This makes spoofing attacks harder to implement and easier to detect (see \ref{cspakp} for more). The Sensor Server is limited by the computer CPU and network card.
-  \item It's efficient. The shared memory layout means that the data always is available for reading or writing without having to read from a file or query a database. 
-  \item It's stable. Each connection is handled by a separate process and the shared memory is protected by semaphores assuring atomic write and read operations.
-  \item It's cheaper. Signal cables and amplifiers are costly. A network topology is usually already there.
-  \item It's manageable. Interfacing was a concern when the Sensor Server was planned. The protocol is therefor easily readable and data is accessible.
- \end{itemize}
+\section{Architecture performance}
 Fast. No memory leaks.
 
-\section{Implementation challenges}
-In this section, I wish to discuss and explain some of the problems or suboptimal solution used in the implementation of the Sensor Server. Some of the solutions should probably be fixed before an eventual deployment. These solution were scheduled to be improved but was not prioritized due to lack of time. 
+\section{Lessons learned}
 
 \subsection{Decision not to use Glib}\label{glib}
 
-\subsection{Processes instead of threads}
-Could not use them
+\subsection{Test focused development}
+
+
+\section{Shortcomings in current implementation}
+This section is used to discuss some of the shortcomings in the current version of the Sensor Server. Some functions were never implemented and others were not finished.
 
 \subsection{Resizing shared memory segments}\label{resizing_shared}
 Ideally, the shared memory segments containing the client list should be resize-able and the size should depend on the number of connected clients. This proved difficult and I was not able to implement it. M. Kerrisk explains in his "The Linux Programming Interface" \cite{kerrisk2010linux}, that most UNIX implementations does not support resizing of a memory map like the shared memory segments used in the Sensor Server. However, there is a non-portable and Linux specific system call, \texttt{mremap()} that can be used on Linux system for this purpose. Unfortunately, the address returned by \texttt{mremap()} might be different from the old address to the shared memory segment. This would mean that pointer inside the shared segment might no longer be valid after a resize operation has been done. A way to avoid this problem caused by the remapping, would be to use offsets instead of pointers when referring to addresses in the mapped region. While troubleshooting problems I had using \texttt{mremap()}, I stumbled upon a bug report reported to the Kernel Bug Tracker \cite{BUG_TRACK} describing similar issues as I was having. This indicate that the trouble I was having might be because of a bug in the Linux kernel. I have yet to confirm this, but it did convince me to leave the implementation with its shortcomings rather than potentially wasting my time on something way out of my reach. The waste of memory would never by substantial anyway, considering that the size of the \texttt{client\_table\_entry} struct is a mere 4664 bytes. 
 
-\subsection{Usage of scripts}
-In the current implementation of the Sensor Server, two scripts are used as part of the main routine. The first one is the \texttt{query\_csac.py}. This is a python script that was originally written to log data from atomic clock during data acquisition \ref{data_aquisition}. For some reason, it proved to be a significant challenge to implement a solution in C to configure, read and write from the atomic clock. The best solution did not even provide a reliable means of communicating with the atomic clock, even though communication with the GPS receivers, which in theory should have been exactly the same, was no problem. Once time got tight, I made the decision to drop the development of the atomic clock serial communication module written in C, and decided to use \texttt{query\_csac.py} by invoking with \texttt{popen()}. The story is much the same with the second script, \texttt{get\_mjd.py}. This is a script that calculates the Modified Julian date, a time format that is heavily used in calculations done by the clock model. The script relies on a library named jdutil.py, written by Matt Davis \cite{MATT_DAVIS}. Permission to use the jdutil.py was granted by Mr. Davis. The correspondence with Mr. Davis is included in the appendix under \ref{davis_email}.
-
-\subsection{Atomic clock communication}
-Write about how it was challenging dealing with both GPS and CSAC. 
-
-	
-\subsection{Issues with MJD calculation}
-Modified Julian Day (MJD) is a way to express both date and time as a single number. It's convenient when doing calculations with dates, because the difference between the MJD for one day and the next, is exactly 1\footnote{For example, the MJD for 24/10-2016 00:00 is 57685.0 and the MJD for 25/10-2016 00:00
-is 57685.0. 12'o clock at the 25/10 would be 57658.5}. Modified Julian Date is also heavily used in the clock model.
-
-
-\section{Architecture flaws}
-This section is used to discuss some of the shortcomings in the current version of the Sensor Server. Some functions were never implemented and others were not finished.
-
 \subsection{Atomic clock management}
 The Sensor Server should have had a separate process that handled the filters and communication with the atomic clock. This would free the processes handling the connections, from dealing with the filters and make the filter abstraction more complete and make the atomic clock model cleaner. The atomic clock model is already logically separated from the filters associated with it, but because of the way the code is organized, the use of the model implies the use of the filter. The atomic clock should still communicate with the atomic clock on its own like it does today, retrieving telemetry data, but the aforementioned process could keep track of the atomic clock's discipline status, steering and other functionality thus creating a more generic way for the system to communicate with the atomic clock. The GPS based filter could greatly benefit from this approach, as they today are not currently doing anything but log occurrences where they were triggered. 
 
-\subsection{Value of shared memory}\label{shared_mem_value}
-Was it necessary?
+\subsection{External MJD calculation}
+Modified Julian Day (MJD) is a way to express both date and time as a single number. It's convenient when doing calculations with dates, for example: the difference between the MJD for one day and the next, is exactly 1\footnote{For example, the MJD for 24/10-2016 00:00 is 57685.0 and the MJD for 25/10-2016 00:00 is 57685.0. 12'o clock at the 25/10 would be 57658.5}. Modified Julian Date is heavily relied on by the clock model (see \ref{clock_model_harald} for more about the clock model). During testing of the Sensor Server software, a python script (see \ref{get_mjd} for more about this script)was used to calculate MJD. This script was scheduled to be replaced by a module written in C, but was left in use because of time constraints. The script is called upon by using \texttt{popen()} which in turn calls fork() to run the script. The clock model is updated every second which means that this script is also invoked every second. This is of course very counterintuitive considering one of our goals for the software was to emphasize efficiency. It should also be noted that the script relies on a library named jdutil.py, written by Matt Davis \cite{MATT_DAVIS}. Permission to use the jdutil.py was granted by Mr. Davis. The correspondence with Mr. Davis is included in the appendix under \ref{davis_email}.
+
+\subsection{External Atomic clock communication}
+ The first one is the \texttt{query\_csac.py}. This is a python script that was originally written to log data from atomic clock during data acquisition \ref{data_aquisition}. For some reason, it proved to be a significant challenge to implement a solution in C to configure, read and write from the atomic clock. The best solution did not even provide a reliable means of communicating with the atomic clock, even though communication with the GPS receivers, which in theory should have been exactly the same, was no problem. Once time got tight, I made the decision to drop the development of the atomic clock serial communication module written in C, and decided to use \texttt{query\_csac.py} by invoking with \texttt{popen()}. 
+
 
 \section{Choice of programming language}
-The SMACC software was originally planned to be written in Java since this was my most fluent programming language. Java is great language, it's object oriented, it has a garbage collector and a lot of useful libraries. As development started, it quickly became apparent that some parts of the code would be performance critical and that portability really wasn't that important anyway. The platform was already decided and there was no reason to believe that it would change in the near future. As we all know, premature optimization is the root of all evil. Being reluctant to commit a deadly programming sin, i decided to look at other languages. Since performance was a concern, Python was also quickly dismissed as an option. C++ would probably have been the best choice, but having never written anything in C before made it sound more exciting and like a nice opportunity to learn something new. During the planning phase of SMACC development, raspbian-2015-05-07 was the latest build. It came with GCC 4.6.3 which only had experimental support for C11(\cite{GCC11}). With C11 no longer considered an option, C99 was the obvious choice given it's attractive features like:
+The atomic clock controller software was originally planned to be written in Java since this was my most fluent programming language. Java is great language, it's object oriented, it has a garbage collector and a lot of useful libraries. As development started, it quickly became apparent that some parts of the code would be performance critical and that portability really wasn't that important anyway. The platform was already decided and there was no reason to believe that it would change in the near future. As we all know, premature optimization is the root of all evil. Being reluctant to commit a deadly programming sin, i decided to look at other languages. Since performance was a concern, Python was also quickly dismissed as an option. C++ would probably have been the best choice, but having never written anything in C before made it sound more exciting and like a nice opportunity to learn something new. During the planning phase of SMACC development, raspbian-2015-05-07 was the latest build. It came with GCC 4.6.3 which only had experimental support for C11(\cite{GCC11}). With C11 no longer considered an option, C99 was the obvious choice given it's attractive features like:
 \begin{itemize}
   \item Variable-length arrays.
   \item Single line comments.
